# sirius

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-testing.yml  pythonpublish.yml
development/: Numba_Dask.ipynb  Test_casa.ipynb  Test_casa_2_sources.ipynb  Test_casa_mosaic.ipynb  Test_casa_pleiades.ipynb  Test_sirius.ipynb  Test_sirius_2_sources.ipynb  Test_sirius_mosaic.ipynb  Test_sirius_pleiades.py  Test_sirius_simulation.ipynb  casa_sim.py  cookie  running_pytest.ipynb  sirius_airy_sim.ipynb  sirius_full_mueller_sim.ipynb  sirius_pleiades.ipynb  sirius_sim.py  test_interpolation.ipynb
development/.img.zarr/: .version  .zattrs  .zmetadata
development/.img.zarr/chan/: 0
docs/: about.md  aca_single_field.ipynb  alma_single_field.ipynb  alma_single_field_dif_pb.ipynb  antenna_beams.ipynb  api.rst  conf.py  development.ipynb  evla_simulation.ipynb  heterogeneous_array_mosaic_simulations.ipynb  index.rst  introduction.ipynb  simple_simulation.ipynb
docs/technical_memo_notebooks/: 03_parallactic_angle.ipynb  04_noise.ipynb  04_noise_calculation.ipynb  05_noise_calculation.ipynb  PB_math.ipynb  source_models.ipynb
sirius/: __init__.py  calc_a_noise.py  calc_beam.py  calc_noise.py  calc_uvw.py  calc_vis.py  calc_vis_point.py  dio.py  direction_rotate.py  display_tools.py  make_ant_sky_jones.py  simulation.py  sirius_client.py
sirius/_parm_utils/: _check_beam_parms.py  _check_calc_uvw_parms.py  _check_uvw_parms.py
sirius/_sirius_utils/: _ant_jones_term.py  _apply_primary_beam.py  _array_utils.py  _beam_utils.py  _calc_parallactic_angles.py  _constants.py  _coord_transforms.py  _direction_rotate.py  _gen_utils.py  _make_pb_symmetric.py  _math.py  _math_utils.py  _primary_beam_funcs.py  _sirius_logger.py  _zernike_polynomials.py
sirius_bench/: asv.conf.json
sirius_data/aperture_polynomial_coefficient_models/: csv_to_zarr.py
sirius_data/dish_models/: csv_to_zarr.py
sirius_data/polynomial_beam_models/: txt_to_zarr.py
sirius_data/telescope_layout/: cfg_to_zarr.py
sirius_data/zernike_dish_models/: csv_to_zarr.py
sirius_tests/calc_vis/: sample_jones_test.py  simulation_test.py
sirius_tests/math/: interpolation_test.py  power_test.py
sirius_tests/simple/: beam_models_test.py  generate_inputs_test.py  simulation_test.py  source_positions_test.py  telescope_layout_test.py
(+1416 files in other folders)
