[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/setup.py                # exclude a file named foo.py in the root of the project (in addition to the defaults)
^/sirius/\_parm\_utils\/* # exclude the parameter checking code, which has some intentionally tight lines