[metadata]
name = sirius
version='0.0.1' ###TODO
description = Simulation of Radio Interferometry from Unique Sources
long_decription = file: README.md, LICENSE
license = GNU General Public License v3.0
author = National Radio Astronomy Observatory
author_email = casa-feedback@nrao.edu
maintainer = Jan-Willem Steeb
url = https://github.com/casangi/sirius
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Framework :: Pytest

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.6
install_requires =
    astropy >= 4.1
    numpy >= 1.18
    scipy
    setuptools >= 40.4  # For pkg_resources
    xarray

[options.extras_require]
io =
    casatools
    casatasks # because scripts i.e., simutil were put in the .private namespace
    zarr

accel =
    numba >= 0.51
    numba-scipy

parallel =
    dask[complete]

viz =
    matplotlib

complete =
    %(io)s
    %(accel)s
    %(parallel)s
    %(viz)s
    pytest

docs =
    %(complete)s
    ipykernel
    ipympl
    ipython
    jupyter-client
    nbsphinx
    recommonmark
    scanpydoc
    sphinx-autoapi
    sphinx-autosummary-accessors
    sphinx_rtd_theme
    twine